NetBSD Problem Report #39411

From jmcneill@pismo.localdomain  Wed Aug 27 02:47:23 2008
Return-Path: <jmcneill@pismo.localdomain>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 1E40363B8A9
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 27 Aug 2008 02:47:23 +0000 (UTC)
Message-Id: <20080827024720.6FF2FBD0CA@pismo.localdomain>
Date: Tue, 26 Aug 2008 22:47:19 -0400 (EDT)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@gnats.NetBSD.org
Subject: ppc oea 750 sysmon_envsys panic
X-Send-Pr-Version: 3.95

>Number:         39411
>Category:       port-macppc
>Synopsis:       ppc oea 750 sysmon_envsys panic
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-macppc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 27 02:50:00 +0000 2008
>Closed-Date:    Wed Oct 15 20:53:49 +0000 2008
>Last-Modified:  Wed Oct 15 20:53:49 +0000 2008
>Originator:     Jared D. McNeill
>Release:        NetBSD 4.99.72
>Organization:

>Environment:


System: NetBSD pismo 4.99.72 NetBSD 4.99.72 (GENERIC) #0: Tue Aug 26 03:58:07 EDT 2008 jmcneill@pismo:/usr/src/sys/arch/macppc/compile/GENERIC macppc
Architecture: powerpc
Machine: macppc
>Description:
	30 seconds after boot, cpu_tau_refresh causes a panic in sysmon_envsys
	on a PowerBook G3 (Firewire/Pismo) with the GENERIC kernel:

	panic: sme_events_worker: invalid units for ENVSYS_FMONSTCHANGED

>How-To-Repeat:
	Boot NetBSD -current on a PowerBook G3 (Firewire/Pismo).
>Fix:
	Workaround: comment out cpu_tau_setup/cpu_tau_refresh in
	src/sys/arch/powerpc/oea/cpu_subr.c

>Release-Note:

>Audit-Trail:
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-macppc/39411: ppc oea 750 sysmon_envsys panic
Date: Wed, 27 Aug 2008 20:53:55 -0400

 This is effectively a duplicate of PR 38994.  (Though mine isn't as
 descriptively titled, nor does it offer the same workaround.)

 Dave


From: Michael Lorenz <macallan@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39411 CVS commit: src/sys/arch/powerpc/oea
Date: Tue, 14 Oct 2008 22:54:22 +0000 (UTC)

 Module Name:	src
 Committed By:	macallan
 Date:		Tue Oct 14 22:54:22 UTC 2008

 Modified Files:
 	src/sys/arch/powerpc/oea: cpu_subr.c

 Log Message:
 Some fixes to the TAU support code:
 - set the ADC time according to clock speed, not some magic number
 - move some mtspr()s which we really only need to do once
 - make our envsys_data_t static, this should fix PR 39411


 To generate a diff of this commit:
 cvs rdiff -r1.49 -r1.50 src/sys/arch/powerpc/oea/cpu_subr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-macppc/39411: ppc oea 750 sysmon_envsys panic 
Date: Tue, 14 Oct 2008 21:20:33 -0400

 Confirming the commit below fixes the problem for my machine.

 Dave

 >Module Name:	src
 >Committed By:	macallan
 >Date:		Tue Oct 14 22:54:22 UTC 2008
 >
 >
 >Modified Files:
 >	src/sys/arch/powerpc/oea: cpu_subr.c
 >
 >
 >Log Message:
 >Some fixes to the TAU support code:
 >- set the ADC time according to clock speed, not some magic number
 >- move some mtspr()s which we really only need to do once
 >- make our envsys_data_t static, this should fix PR 39411

 >To generate a diff of this commit:
 >cvs rdiff -r1.49 -r1.50 src/sys/arch/powerpc/oea/cpu_subr.c


State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 15 Oct 2008 20:53:49 +0000
State-Changed-Why:
Confirmed fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.