Some fixes to the TAU support code: - set the ADC time according to clock speed, not some magic number - move some mtspr()s which we really only need to do once - make our envsys_data_t static, this should fix PR 39411